--- a/nutri_fit_pro/pubspec.yaml
+++ b/nutri_fit_pro/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   image_picker: ^0.8.4+3 
   shared_preferences: ^2.0.0
   flutter_lints: ^1.0.0
+  flutter_spinkit: ^5.2.1
   
 
 dev_dependencies:
